--- a/dvn-app/trunk/src/DVN-web/web/resources/icefaces/dvn_rime/dvn_rime.css
+++ b/dvn-app/trunk/src/DVN-web/web/resources/icefaces/dvn_rime/dvn_rime.css
@@ -145,9 +145,9 @@ label.iceSelOneRb {
     color: #484848;
 }
 
-.iceCmdBtn {
+/* .iceCmdBtn {
     font-family: Arial, Helvetica, sans-serif;
-}
+} */
 
 /*
 =================== ICE Component Appearence ==============
